--- a/src/FXML/sign_up.fxml
+++ b/src/FXML/sign_up.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SignUp">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.SignUp">
    <children>
       <Text layoutX="222.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="회원가입">
          <font>
@@ -24,8 +24,8 @@
       <TextField fx:id="tf_detailAddress" layoutX="347.0" layoutY="274.0" prefHeight="28.0" prefWidth="132.0" promptText="상세주소" />
       <MenuButton fx:id="mb_gender" layoutX="347.0" layoutY="181.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="132.0" text="성별">
         <items>
-          <MenuItem mnemonicParsing="false" onAction="#selectGender" text="남성" />
-          <MenuItem mnemonicParsing="false" onAction="#selectGender" text="여성" />
+          <MenuItem mnemonicParsing="false" onAction="#selectGender" text="M" />
+          <MenuItem mnemonicParsing="false" onAction="#selectGender" text="F" />
         </items>
       </MenuButton>
       <MenuButton fx:id="mb_do" layoutX="347.0" layoutY="214.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="132.0" text="도">
