--- a/src/FXML/MainDisplay.fxml
+++ b/src/FXML/MainDisplay.fxml
@@ -8,18 +8,18 @@
 <?import javafx.scene.text.Text?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="1118.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderpaneId" fx:controller="FxController.MainDisplayController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="1118.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <AnchorPane layoutX="-1.0" prefHeight="92.0" prefWidth="958.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff85" height="98.0" layoutX="5.0" layoutY="4.0" stroke="BLACK" strokeType="INSIDE" width="1106.0" />
-            <Button layoutX="14.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="여행지 검색" />
             <Text layoutX="10.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="메인 화면">
                <font>
                   <Font size="28.0" />
                </font>
             </Text>
-            <Button layoutX="144.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="주변 검색" />
+            <Button fx:id="btnDestinationSearch" layoutX="14.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="여행지 검색" onAction="#handleBtnDestinationSearch"/>
+            <Button fx:id="btnAroundSearch" layoutX="144.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="주변 검색" onAction="#handleBtnAroundSearch"/>
             <Button layoutX="271.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="주차장/화장실" />
             <Button layoutX="399.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="통계" />
             <Button layoutX="998.0" layoutY="46.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" text="로그아웃" />
