--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -6,31 +6,132 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetail">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
    <children>
-      <Text fx:id="t_name" layoutX="75.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="해수욕장명 : " />
-      <Text fx:id="t_address" layoutX="75.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주소 : " />
-      <Text fx:id="t_phoneNumber" layoutX="75.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="전화번호 : " />
-      <Text fx:id="t_convenient" layoutX="75.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="편의시설 : " />
-      <Button fx:id="btn_favorite" layoutX="410.0" layoutY="60.0" mnemonicParsing="false" text="즐겨찾기 등록" />
-      <TableView fx:id="tv_review" layoutX="44.0" layoutY="497.0" prefHeight="313.0" prefWidth="712.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
+      <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" prefHeight="260.0" prefWidth="744.0">
         <columns>
           <TableColumn fx:id="tc_date" prefWidth="55.0" text="순서" />
           <TableColumn fx:id="tc_content" prefWidth="549.0" text="리뷰내용" />
-            <TableColumn fx:id="tc_star" minWidth="0.0" prefWidth="31.0" text="별점" />
-            <TableColumn fx:id="tc_writer" prefWidth="76.0" text="작성자" />
+            <TableColumn fx:id="tc_star" minWidth="0.0" prefWidth="48.0" text="별점" />
+            <TableColumn fx:id="tc_writer" prefWidth="91.0" text="작성자" />
         </columns>
       </TableView>
-      <Button fx:id="btn_registerReview" layoutX="1015.0" layoutY="497.0" mnemonicParsing="false" onAction="#registerReview" text="리뷰 등록" />
-      <Text fx:id="t_openingPeriod" layoutX="75.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="개장기간 : " />
-      <Text fx:id="t_homePage" layoutX="75.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="홈페이지 : " />
-      <Text fx:id="t_introduction" layoutX="75.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="소개 : " />
-      <Text fx:id="t_availableTime" layoutX="75.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="수영가능시간 : " />
-      <TextArea fx:id="ta_reviewContent" layoutX="769.0" layoutY="535.0" prefHeight="275.0" prefWidth="314.0" />
-      <ComboBox fx:id="cb_star" layoutX="935.0" layoutY="497.0" prefHeight="23.0" prefWidth="68.0" promptText="별점" />
-      <Text layoutX="778.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="리뷰 작성" />
-      <Button fx:id="btn_registerImg" layoutX="874.0" layoutY="497.0" mnemonicParsing="false" onAction="#registerImg" text="이미지" />
+      <Button fx:id="btn_registerReview" layoutX="1015.0" layoutY="548.0" mnemonicParsing="false" onAction="#registerReview" text="리뷰 등록" />
+      <TextArea fx:id="ta_reviewContent" layoutX="769.0" layoutY="574.0" prefHeight="236.0" prefWidth="314.0" />
+      <ComboBox fx:id="cb_star" layoutX="935.0" layoutY="548.0" prefHeight="23.0" prefWidth="68.0" promptText="별점" />
+      <Text layoutX="769.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="리뷰 작성" wrappingWidth="91.99999862909317">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Button fx:id="btn_registerImg" layoutX="874.0" layoutY="548.0" mnemonicParsing="false" onAction="#registerImg" text="이미지" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="11.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
+      <Text fx:id="t_name" layoutX="39.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="해수욕장명 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_address" layoutX="99.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주소 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_phoneNumber" layoutX="59.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="전화번호 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_convenient" layoutX="59.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="편의시설 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_openingPeriod" layoutX="59.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="개장기간 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_homePage" layoutX="59.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="홈페이지 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_introduction" layoutX="99.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="소개 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Text fx:id="t_availableTime" layoutX="19.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="수영가능시간 : ">
+         <font>
+            <Font size="20.0" />
+         </font></Text>
+      <Button fx:id="btn_favorite" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="151.0" text="즐겨찾기 등록">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="247.0" layoutX="13.0" layoutY="297.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
+      <Text layoutX="26.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="통계">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
+      <Text layoutX="26.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="상세정보">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
+      <Button layoutX="25.0" layoutY="347.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="129.0" text="나이별">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="24.0" layoutY="411.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="129.0" text="성별">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button layoutX="24.0" layoutY="476.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="129.0" text="출신지별">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Text fx:id="resultTextName" layoutX="156.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextAddress" layoutX="156.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextPhoneNum" layoutX="156.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextIntroduction" layoutX="156.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextConvenient" layoutX="156.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="reusltTextOpenPeriod" layoutX="156.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextAvailableTime" layoutX="156.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="resultTextHomepage" layoutX="156.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <AnchorPane layoutX="170.0" layoutY="303.0" prefHeight="236.0" prefWidth="573.0" />
    </children>
 </AnchorPane>
