--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -15,8 +15,8 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
       <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" prefHeight="260.0" prefWidth="744.0">
         <columns>
-          <TableColumn fx:id="tc_date" prefWidth="55.0" text="순서" />
-          <TableColumn fx:id="tc_content" prefWidth="549.0" text="리뷰내용" />
+          <TableColumn fx:id="tc_date" prefWidth="91.99996948242188" text="날짜" />
+          <TableColumn fx:id="tc_content" prefWidth="512.0000305175781" text="리뷰내용" />
             <TableColumn fx:id="tc_star" minWidth="0.0" prefWidth="48.0" text="별점" />
             <TableColumn fx:id="tc_writer" prefWidth="91.0" text="작성자" />
         </columns>
@@ -94,42 +94,42 @@
       </Button>
       <Text fx:id="resultTextName" layoutX="156.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextAddress" layoutX="156.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextPhoneNum" layoutX="156.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextIntroduction" layoutX="156.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextConvenient" layoutX="156.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="reusltTextOpenPeriod" layoutX="156.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextAvailableTime" layoutX="156.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <Text fx:id="resultTextHomepage" layoutX="156.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
-            <Font size="15.0" />
+            <Font size="13.0" />
          </font>
       </Text>
       <AnchorPane layoutX="170.0" layoutY="303.0" prefHeight="236.0" prefWidth="573.0" />
