--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -13,7 +13,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
-      <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" prefHeight="260.0" prefWidth="744.0">
+      <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" prefHeight="260.0" prefWidth="744.0" onMouseClicked="#doubleClickMouse">
         <columns>
           <TableColumn fx:id="tc_date" prefWidth="91.99996948242188" text="날짜" />
           <TableColumn fx:id="tc_content" prefWidth="512.0000305175781" text="리뷰내용" />
