--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -13,7 +13,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
-      <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" prefHeight="260.0" prefWidth="744.0" onMouseClicked="#doubleClickMouse">
+      <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" onMouseClicked="#doubleClickMouse" prefHeight="260.0" prefWidth="744.0">
         <columns>
           <TableColumn fx:id="tc_date" prefWidth="91.99996948242188" text="날짜" />
           <TableColumn fx:id="tc_content" prefWidth="512.0000305175781" text="리뷰내용" />
@@ -62,7 +62,7 @@
          <font>
             <Font size="20.0" />
          </font></Text>
-      <Button fx:id="btn_favorite" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="151.0" text="즐겨찾기 등록">
+      <Button fx:id="btn_favorite" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBtnFavorite" prefHeight="56.0" prefWidth="151.0" text="즐겨찾기 등록">
          <font>
             <Font size="18.0" />
          </font></Button>
@@ -132,6 +132,6 @@
             <Font size="13.0" />
          </font>
       </Text>
-      <AnchorPane layoutX="170.0" layoutY="303.0" prefHeight="236.0" prefWidth="573.0" />
+      <AnchorPane fx:id="anchorPane" layoutX="170.0" layoutY="303.0" prefHeight="236.0" prefWidth="573.0" />
    </children>
 </AnchorPane>
