--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
@@ -77,7 +78,7 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <Button layoutX="25.0" layoutY="347.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="129.0" text="나이별">
+      <Button layoutX="25.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleBtnAgeStat" prefHeight="56.0" prefWidth="129.0" text="나이별">
          <font>
             <Font size="24.0" />
          </font>
@@ -132,6 +133,6 @@
             <Font size="13.0" />
          </font>
       </Text>
-      <AnchorPane fx:id="anchorPane" layoutX="170.0" layoutY="303.0" prefHeight="236.0" prefWidth="573.0" />
+      <PieChart fx:id="pieChart" layoutX="229.0" layoutY="315.0" prefHeight="210.0" prefWidth="502.0" />
    </children>
 </AnchorPane>
