--- a/src/FXML/Parking.fxml
+++ b/src/FXML/Parking.fxml
@@ -4,19 +4,26 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="570.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ParkingController">
-    <WebView fx:id="webView" layoutX="25.0" prefHeight="372.0" prefWidth="950.0" />
-    <TableView fx:id="myTableView" layoutX="25.0" layoutY="380.0" prefHeight="170.0" prefWidth="950.0">
-        <columns>
-            <TableColumn fx:id="nameColumn" prefWidth="125.0" text="이름" />
-            <TableColumn fx:id="addressColumn" prefWidth="231.0" text="위치" />
-            <TableColumn fx:id="sizeColumn" prefWidth="59.0" text="구획수" />
-            <TableColumn fx:id="opening_daysColumn" prefWidth="70.0" text="운영요일" />
-            <TableColumn fx:id="weekdays_opening_timeColumn" prefWidth="120.0" text="평일 운영시간" />
-            <TableColumn fx:id="sat_opening_timeColumn" prefWidth="145.0" text="토요일 운영시간" />
-            <TableColumn fx:id="holiday_opening_timeColumn" prefWidth="145.0" text="일요일/공휴일 운영시간" />
-            <TableColumn fx:id="feeColumn" prefWidth="54.0" text="요금" />
-        </columns>
-    </TableView>
-</AnchorPane>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.201"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ParkingController">
+    <children>
+        <Pane prefHeight="600.0" prefWidth="1100.0">
+            <WebView fx:id="webView" layoutX="50.0" layoutY="30.0" prefHeight="280.0" prefWidth="1000.0" />
+            <TableView fx:id="myTableView" layoutX="50.0" layoutY="350.0" prefHeight="180.0" prefWidth="1000.0">
+                <columns>
+                    <TableColumn fx:id="nameColumn" prefWidth="125.0" text="이름"/>
+                    <TableColumn fx:id="addressColumn" prefWidth="231.0" text="위치"/>
+                    <TableColumn fx:id="sizeColumn" prefWidth="59.0" text="구획수"/>
+                    <TableColumn fx:id="opening_daysColumn" prefWidth="70.0" text="운영요일"/>
+                    <TableColumn fx:id="weekdays_opening_timeColumn" prefWidth="120.0" text="평일 운영시간"/>
+                    <TableColumn fx:id="sat_opening_timeColumn" prefWidth="145.0" text="토요일 운영시간"/>
+                    <TableColumn fx:id="holiday_opening_timeColumn" prefWidth="145.0" text="일요일/공휴일 운영시간"/>
+                    <TableColumn fx:id="feeColumn" prefWidth="54.0" text="요금"/>
+                </columns>
+            </TableView>
+        </Pane>
+    </children>
+</GridPane>
