--- a/src/FXML/login.fxml
+++ b/src/FXML/login.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.Main">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="login" stylesheets="@CSS/application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.Main">
    <children>
-      <TextField fx:id="tf_id" layoutX="232.0" layoutY="189.0" promptText="아이디" />
-      <PasswordField fx:id="pf_password" layoutX="231.0" layoutY="227.0" promptText="비밀번호" />
-      <Button fx:id="btn_login" layoutX="232.0" layoutY="280.0" mnemonicParsing="false" onAction="#login" text="로그인" />
-      <Button fx:id="btn_signup" layoutX="306.0" layoutY="280.0" mnemonicParsing="false" onAction="#signUp" text="회원가입" />
+      <TextField fx:id="tf_id" layoutX="216.0" layoutY="189.0" promptText="아이디" />
+      <PasswordField fx:id="pf_password" layoutX="215.0" layoutY="227.0" promptText="비밀번호" />
+      <Button fx:id="btn_login" layoutX="229.0" layoutY="279.0" mnemonicParsing="false" onAction="#login" text="로그인" />
+      <Button fx:id="btn_signup" layoutX="301.0" layoutY="279.0" mnemonicParsing="false" onAction="#signUp" text="회원가입" />
       <Text layoutX="229.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="여 정 시">
          <font>
             <Font size="39.0" />
